--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.13.1",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
