--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@tailwindcss/vite": "^4.1.16",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.13.1",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "react": "19.2.0",
