--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BACKEND_URL=https://api-crud.elcho.dev/api/v1/7b5eb-ad530-92202/listt
+NEXT_PUBLIC_BACKEND_URL = https://api-crud.elcho.dev/api/v1/7b5eb-ad530-92202/list
 # NEXT_PUBLIC_BACKEND_URL=https://cf0e92d0f8fcab91.mokky.dev/list?limit=1000
